# EAST

./: .gitignore  .gitmodules  Dockerfile  EAST_colab.ipynb  Makefile  README.md  data_util.py  deploy.sh  eval.py  eval_icdar13.py  flags.py  icdar.py  locality_aware_nms.py  model.py  multigpu_train.py  nms.py  ocr_tesseract.py  readme.md  requirements.txt  resume_trainning.sh  roi.py  run_demo_server.py  show_data.py  test.sh  test_icdar13.sh  test_images.py  test_requirements.txt  train.sh  ubuntu.sh  说明.md
cv_modules/: crop.py  cvPlayAround.py  roi.py  testInterrupt.py
lanms/: .gitignore  CMakeLists.txt  Makefile  __init__.py  lanms.cmd  lanms.cpp  lanms.h  main.cpp
nets/: resnet_utils.py  resnet_v1.py
poets/: LICENSE  README.md  output.txt
result/: res_img_1.txt  res_img_10.txt  res_img_100.txt  res_img_101.txt  res_img_102.txt  res_img_103.txt  res_img_104.txt  res_img_105.txt  res_img_106.txt  res_img_107.txt  res_img_108.txt  res_img_109.txt  res_img_11.txt  res_img_110.txt  res_img_111.txt  res_img_112.txt  res_img_113.txt  res_img_114.txt  res_img_115.txt  res_img_116.txt  res_img_117.txt  res_img_118.txt  res_img_119.txt  res_img_12.txt  res_img_120.txt  res_img_121.txt  res_img_122.txt  res_img_123.txt  res_img_124.txt  res_img_125.txt  res_img_126.txt  res_img_127.txt  res_img_128.txt  res_img_129.txt  res_img_13.txt  res_img_130.txt  res_img_131.txt  res_img_132.txt  res_img_133.txt  res_img_134.txt  (+450 more)
result13/: res_img_1.txt  res_img_10.txt  res_img_100.txt  res_img_101.txt  res_img_102.txt  res_img_103.txt  res_img_104.txt  res_img_105.txt  res_img_106.txt  res_img_107.txt  (+207 more)
(+7 files in other folders)
